# RSS

./: CODE_OF_CONDUCT.md  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature-request.md
.github/workflows/: video_streamer.rs  website.yml
backend/video_processor/: Cargo.toml
backend/video_processor/src/: compressor.rs  main.rs  video.rs
docs/: Design.md  Planning.md
docs/Requirements/: Technical Specifications.md  User.md
frontend/website/: eslint.config.js  package-lock.json  package.json  tailwind.config.cjs
frontend/website/src/: store.ts
frontend/website/src/lib/: validateEmail.ts  validatePassword.ts
frontend/website/src/lib/tests/: validateEmail.test.ts  validatePassword.test.ts
frontend/website/src/routes/: +layout.svelte  +page.svelte  Footer.svelte  Header.svelte  styles.css
frontend/website/src/routes/about/: +page.svelte
frontend/website/src/routes/signin/: +page.svelte
frontend/website/src/routes/signup/: +page.svelte
